# rubik

./: CMakeLists.txt  bot.py  count.cpp  fragshader.fsh  main.cpp  run  solvelayers.cpp  vertshader.vsh
cache/: shared
kociemba/: coordcube.c  cubiecube.c
opencvtest/: main.py
